--- a/SocialEventPlanner/res/layout/activity_new.xml
+++ b/SocialEventPlanner/res/layout/activity_new.xml
@@ -42,7 +42,10 @@
 	    	android:layout_gravity="center_horizontal"
 	    	android:layout_marginLeft="20dip"
         	android:layout_marginRight="20dip"
-	    	/>      	
+        	android:layout_marginBottom="10dp"
+        	android:background="@drawable/button_border"
+	    	/>
+		
 		<DatePicker
 		    android:id="@+id/date_picker"
 	    	android:layout_height="wrap_content" 
@@ -55,6 +58,8 @@
 	    	android:layout_height="wrap_content"
 	    	android:layout_width="match_parent"
 		/>
+
+		
 		
 	</LinearLayout>
 </ScrollView>
