--- a/SocialEventPlanner/res/layout/activity_single_event.xml
+++ b/SocialEventPlanner/res/layout/activity_single_event.xml
@@ -1,34 +1,171 @@
-<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
-	<RelativeLayout
-    	android:layout_width="match_parent"
-   	 	android:layout_height="wrap_content"
-    	android:orientation="vertical" >
 
-	<TextView
+<RelativeLayout 
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.s3390601.socialeventplanner.view.SingleEventActivity" >
+
+    <TextView
             android:id="@+id/title_view_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="7dp"
+            android:layout_marginTop="4dp"
             android:labelFor="@+id/title_view"
             android:text="@string/title"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+             />
 
       <TextView
-            android:id="@id/title_view"
+            android:id="@+id/title_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:layout_marginLeft="10dp"
             android:layout_alignTop="@id/title_view_label"
             android:layout_toRightOf="@id/title_view_label"
             android:ems="10"
             />
-		
-	</RelativeLayout>
-</ScrollView>
+      
+      <TextView
+            android:id="@+id/date_view_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/title_view"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="7dp"
+            android:labelFor="@+id/date_view"
+            android:text="@string/date"
+             />
 
+      <TextView
+            android:id="@+id/date_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="10dp"
+            android:layout_alignTop="@id/date_view_label"
+            android:layout_toRightOf="@id/date_view_label"
+            android:ems="10"
+            />
+      <TextView
+            android:id="@+id/time_view_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/date_view"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="7dp"
+            android:labelFor="@+id/time_view"
+            android:text="@string/time"
+             />
+
+      <TextView
+            android:id="@+id/time_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="10dp"
+            android:layout_alignTop="@id/time_view_label"
+            android:layout_toRightOf="@id/time_view_label"
+            android:ems="10"
+            />
+      
+	<TextView
+            android:id="@+id/venue_view_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/time_view"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="7dp"
+            android:labelFor="@+id/venue_view"
+            android:text="@string/venue"
+             />
+
+      <TextView
+            android:id="@+id/venue_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="10dp"
+            android:layout_alignTop="@id/venue_view_label"
+            android:layout_toRightOf="@id/venue_view_label"
+            android:ems="10"
+            />
+
+      <TextView
+            android:id="@+id/location_view_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/venue_view"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="7dp"
+            android:labelFor="@+id/location_view"
+            android:text="@string/location"
+             />
+
+      <TextView
+            android:id="@+id/location_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="10dp"
+            android:layout_alignTop="@id/location_view_label"
+            android:layout_toRightOf="@id/location_view_label"
+            android:ems="10"
+            />
+
+	<TextView
+            android:id="@+id/attendees_view_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/location_view"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="7dp"
+            android:labelFor="@+id/attendees_listView"
+            android:text="@string/attendees"
+             />
+      <ListView
+          android:id="@+id/attendees_listView"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_alignLeft="@+id/attendees_view_label"
+          android:layout_below="@+id/attendees_view_label" >
+      </ListView>
+      
+   	<TextView
+            android:id="@+id/notes_view_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/attendees_listView"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="7dp"
+            android:labelFor="@+id/attendees_notes"
+            android:text="@string/notes"
+             />
+
+	<TextView
+            android:id="@+id/notes_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="10dp"
+            android:layout_alignTop="@id/notes_view_label"
+            android:layout_toRightOf="@id/notes_view_label"
+            android:ems="10"
+            />
+
+</RelativeLayout>
+</ScrollView>
