--- a/SocialEventPlanner/res/values/styles.xml
+++ b/SocialEventPlanner/res/values/styles.xml
@@ -16,5 +16,13 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
-
+	 <style name="TitlesStyle" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textColor">#189ccc</item>
+        <item name="android:typeface">normal</item>
+    </style>
+    
+	 <style name="ItemStyle" parent="@android:style/TextAppearance.Medium">
+	     	<item name="android:textColor">#25d9af</item>
+        	<item name="android:typeface">normal</item>
+	 </style>
 </resources>
