--- a/SocialEventPlanner/res/values/styles.xml
+++ b/SocialEventPlanner/res/values/styles.xml
@@ -17,12 +17,12 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 	 <style name="TitlesStyle" parent="@android:style/TextAppearance.Medium">
-        <item name="android:textColor">#189ccc</item>
+        <item name="android:textColor">@android:color/holo_blue_dark</item>
         <item name="android:typeface">normal</item>
     </style>
     
 	 <style name="ItemStyle" parent="@android:style/TextAppearance.Medium">
-	     	<item name="android:textColor">#25d9af</item>
+	     	<item name="android:textColor">@android:color/holo_blue_bright</item>
         	<item name="android:typeface">normal</item>
 	 </style>
 </resources>
