--- a/SocialEventPlanner/res/layout/activity_new.xml
+++ b/SocialEventPlanner/res/layout/activity_new.xml
@@ -46,6 +46,31 @@
         	android:gravity="fill_horizontal"
         	android:hint="@string/new_note"
         	 />
+		<EditText
+        	android:id="@+id/new_latitude_field"
+        	android:layout_height="wrap_content"
+        	android:layout_width="match_parent"
+        	android:layout_marginLeft="20dip"
+        	android:layout_marginRight="20dip"
+        	android:layout_marginBottom="7dip"
+        	android:scrollHorizontally="true"
+        	android:inputType="text"
+        	android:gravity="fill_horizontal"
+        	android:hint="@string/latitude"
+        	 />
+		
+		<EditText
+        	android:id="@+id/new_longitude_field"
+        	android:layout_height="wrap_content"
+        	android:layout_width="match_parent"
+        	android:layout_marginLeft="20dip"
+        	android:layout_marginRight="20dip"
+        	android:layout_marginBottom="7dip"
+        	android:scrollHorizontally="true"
+        	android:inputType="text"
+        	android:gravity="fill_horizontal"
+        	android:hint="@string/longitude"
+        	 />
 		<Button
 	    	android:id="@+id/attendees_picker_button"
 	    	android:layout_height="wrap_content"
